--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ sentencepiece>=0.2.1
 torch>=2.10.0
 transformers>=5.1.0
 Pillow>=10.0.0
-
+tensorflow-cpu==2.15.0
 # Backend (FastAPI)
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
